some more work on Spain

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -37,13 +37,15 @@ SPR_rig_elections:0 "Elections will soon be held, disallowing Carlists or CNT-FA
 SPR_become_CNT:0 "§Y[SPR.GetNameDef]§! becomes §Y[CNT.GetNameDef]§!\n"
 SPR_become_CAR:0 "§Y[SPR.GetNameDef]§! becomes §Y[CAR.GetNameDef]§!\n"
 SPR_cancel_election:0 "The elections will be §Rcanceled§!\n"
+SPR_reinforce_madrid:0 "Reserve units are called up in §YMadrid§!\n"
+SPR_workers_rise:0 "Mine and road workers rise up to support the cause!\n"
 
 ### Ideas ###
 SPR_memories_of_the_republic:0 "Memories of the Republic"
-SPR_black_monday:0 "Spain is hit by the Black Monday"
+SPR_black_monday:0 "Effects of Black Monday"
 SPR_social_breakdown:0 "A fractured Society"
 SPR_portuguese_economic_cooperation:0 "Economic Cooperation with Portugal"
-SPR_italian_economic_cooperation:0 "Economic Cooperation with the Federation of Italy"
+SPR_italian_economic_cooperation:0 "Economic Cooperation with the Italian Federation"
 
 SPR_cnt_activities_allowed:0 "CNT activities"
 SPR_cnt_activities_banned:0 "CNT activities"
@@ -65,19 +67,19 @@ SPR_advisors_germany:0 "German Assistance"
 SPR_totalist_party:0 "POUM"
 SPR_totalist_party_long:0 "Partido Obrero de Unificación Marxista"
 SPR_syndicalist_party:0 "CNT-FAI"
-SPR_syndicalist_party_long:0 "Confederación Nacional del Trabajo - \nFederación Anarquista Ibérica"
+SPR_syndicalist_party_long:0 "Confederación Nacional del Trabajo - Federación Anarquista Ibérica"
 SPR_radical_socialist_party:0 "Caballeistas"
 SPR_radical_socialist_party_long:0 "Caballeistas"
 SPR_social_democrat_party:0 "Prietistas"
 SPR_social_democrat_party_long:0 "Prietistas"
 SPR_social_liberal_party:0 "Izquierda Republicana"
-SPR_social_liberal_party_long:0 "Izquierda Republicana, \nthe Republican Left"
+SPR_social_liberal_party_long:0 "Izquierda Republicana"
 SPR_market_liberal_party:0 "PLM"
-SPR_market_liberal_party_long:0 "Partido Liberal Moderado, \nthe Moderate Liberal Party"
+SPR_market_liberal_party_long:0 "Partido Liberal Moderado"
 SPR_social_conservative_party:0 "Acción Popular"
-SPR_social_conservative_party_long:0 "The Moderate Section of the Acción Popular"
+SPR_social_conservative_party_long:0 "The Moderate Faction of the Acción Popular"
 SPR_authoritarian_democrat_party:0 "Acción Popular"
-SPR_authoritarian_democrat_party_long:0 "The Radical Section of the Acción Popular"
+SPR_authoritarian_democrat_party_long:0 "The Radical Faction of the Acción Popular"
 SPR_paternal_autocrat_party:0 "Falange Española"
 SPR_paternal_autocrat_party_long:0 "Falange Española"
 SPR_national_populist_party:0 "JONS"
@@ -303,32 +305,15 @@ sprc.4.a:0 "Arise, workers of Spain!"
 sprc.101.t:0 "Civil War in Spain!"
 sprc.101.d:0 "The legitimate Spanish Kingdom under Alfonso XIII is under severe threat from anarchists and fanatics! While many are saying that this provides further proof of the terminal weakness of the House of Bourbon, a secure Spain is an important part of our defensive plans. It could be wise to help the Government put an end to these threats."
 sprc.101.a:0 "Send material and technical experts"
-sprc.101.b:"Spain is of no interest to Russia"
+sprc.101.b:0 "Spain is of no interest to [Root.GetNameDef]"
 
-sprc.102.t:0 "Russian Aid Arrives!"
-sprc.102.d:0 "The Russian state believes that our success in the present struggle in Spain is essential for the continued stability of Europe, and has sent us considerable amounts of supplies and military 'experts' to help us in the fight."
+sprc.102.t:0 "[From.GetAdjective] Aid Arrives!"
+sprc.102.d:0 "The [From.GetAdjective] government believes our success in the present struggle for control of Spain is essential for the continued stability of Europe, and has sent us considerable amounts of supplies and military 'experts' to help us in the fight."
 sprc.102.a:0 "Okay"
 
 sprc.103.t:0 "The End of the Spanish War"
-sprc.103.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
+sprc.103.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported they learned many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.103.a:0 "Great!"
-
-sprc.104.t:0 "Civil War in Spain!"
-sprc.104.d:0 "The legitimate Spanish Kingdom under Alfonso XIII is under severe threat from anarchists and fanatics! While many are saying that this provides further proof of the terminal weakness of the House of Bourbon, a secure Spain is an important part of our defensive plans. It could be wise to help the Government put an end to these threats."
-sprc.104.a:0 "Send material and technical experts"
-sprc.104.b:"Spain is of no interest to Germany."
-
-sprc.105.t:0 "German Aid Arrives!"
-sprc.105.d:0 "The German Kaiser believes that our success in the present struggle in Spain is essential for the continued stability of Europe, and has sent us considerable amounts of supplies, military 'experts,' and some motorised infantry to help us in the fight."
-sprc.105.a:0 "Okay"
-
-sprc.106.t:0 "The End of the Spanish War"
-sprc.106.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.106.a:0 "Great!"
-
-sprc.115.t:0 "The End of the Spanish War"
-sprc.115.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.115.a:0 "Great!"
 
 ### Post-War ###
 
@@ -336,74 +321,22 @@ sprc.115.a:0 "Great!"
 
 ### Volunteers ###
 
-sprc.203.t:0 "The End of the Spanish War"
-sprc.203.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.203.a:0 "Great!"
-
 sprc.204.t:0 "Anarco-Syndicalist Uprising!"
 sprc.204.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
 sprc.204.a:0 "Publicly Support the CNT-FAI"
 sprc.204.b:0 "Remain silent on Spanish affairs"
 
-sprc.205.t:0 "British Support"
-sprc.205.d:0 "The Union of Britain has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle of the workers!"
+sprc.205.t:0 "[From.GetAdjective] Support"
+sprc.205.d:0 "[From.GetNameDef] has decided to support our cause in the civil war. They have sent soldiers and supplies to support us in the struggle of the workers!"
 sprc.205.a:0 "Good."
 
 sprc.206.t:0 "The End of the Spanish War"
 sprc.206.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.206.a:0 "Great!"
 
-sprc.207.t:0 "Anarco-Syndicalist Uprising!"
-sprc.207.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
-sprc.207.a:0 "Publicly Support the CNT-FAI"
-sprc.207.b:0 "Remain silent on Spanish affairs"
-
-sprc.208.t:0 "Italian Support"
-sprc.208.d:0 "The Socialist Republic of Italy has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle of the workers!"
-sprc.208.a:0 "Good."
-
-sprc.209.t:0 "The End of the Spanish War"
-sprc.209.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.209.a:0 "Great!"
-
-sprc.210.t:0 "Anarco-Syndicalist Uprising!"
-sprc.210.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
-sprc.210.a:0 "Publicly Support the CNT-FAI"
-sprc.210.b:0 "Remain silent on Spanish affairs"
-
-sprc.211.t:0 "Soviet Support"
-sprc.211.d:0 "The Soviet Union has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle of the workers!"
-sprc.211.a:0 "Good."
-
-sprc.212.t:0 "The End of the Spanish War"
-sprc.212.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.212.a:0 "Great!"
-
-sprc.213.t:0 "Anarco-Syndicalist Uprising!"
-sprc.213.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
-sprc.213.a:0 "Publicly Support the CNT-FAI"
-sprc.213.b:0 "Remain silent on Spanish affairs"
-
-sprc.214.t:0 "Mexican Support"
-sprc.214.d:0 "The United States of Mexico has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle of the workers!"
-sprc.214.a:0 "Good."
-
-sprc.215.t:0 "The End of the Spanish War"
-sprc.215.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.215.a:0 "Great!"
-
-sprc.216.t:0 "Anarco-Syndicalist Uprising!"
-sprc.216.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
-sprc.216.a:0 "Publicly Support the CNT-FAI"
-sprc.216.b:0 "Remain silent on Spanish affairs"
-
-sprc.217.t:0 "Brazilian Support"
-sprc.217.d:0 "Brazil has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle of the workers!"
-sprc.217.a:0 "Good."
-
-sprc.218.t:0 "The End of the Spanish War"
-sprc.218.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.218.a:0 "Great!"
+sprc.207.t:0 "Workers Rise Up"
+sprc.207.d:0 "Our efforts at organizing and building along the coast are paying off. The workers have risen to stand with us, and our secret work at building forts in the old castles and watch posts have come to fruition."
+sprc.207.a:0 "Huzzah!"
 
 ### Post-War ###
 
@@ -421,69 +354,17 @@ sprc.221.b:0 "Barcelona is now and forever the People's home."
 ### Volunteers ###
 
 sprc.301.t:0 "Carlist Uprising"
-sprc.301.d:0 "Spain is collapsing into anarchy, and the Pope has declared that Catholics should support the Carlist cause - We should send aid at once!"
+sprc.301.d:0 "Spain is collapsing into anarchy, and the Pope has declared that all good Catholics should support the Carlist cause - We should send aid at once!"
 sprc.301.a:0 "Publicly Support the Carlists"
 sprc.301.b:0 "Remain silent on Spanish affairs"
 
-sprc.302.t:0 "Italy supports us"
-sprc.302.d:0 "The Italian Federation has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle!"
+sprc.302.t:0 "[From.GetNameDef] supports us"
+sprc.302.d:0 "[From.GetNameDef] has decided to support our cause in the civil war. They have sent soldiers and supplies to support us in the struggle!"
 sprc.302.a:0 "Good."
 
 sprc.303.t:0 "The End of the Spanish War"
 sprc.303.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.303.a:0 "Great!"
-
-sprc.304.t:0 "Carlist Uprising"
-sprc.304.d:0 "Spain is collapsing into anarchy, and the Pope has declared that Catholics should support the Carlist cause - We should send aid at once!"
-sprc.304.a:0 "Publicly Support the Carlists"
-sprc.304.b:0 "Remain silent on Spanish affairs"
-
-sprc.305.t:0 "Portugal supports us"
-sprc.305.d:0 "Portugal has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle!"
-sprc.305.a:0 "Good."
-
-sprc.306.t:0 "The End of the Spanish War"
-sprc.306.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.306.a:0 "Great!"
-
-sprc.307.t:0 "Carlist Uprising"
-sprc.307.d:0 "Spain is collapsing into anarchy, and the Pope has declared that Catholics should support the Carlist cause - We should send aid at once!"
-sprc.307.a:0 "Publicly Support the Carlists"
-sprc.307.b:0 "Remain silent on Spanish affairs"
-
-sprc.308.t:0 "Austria supports us"
-sprc.308.d:0 "The Austrian Empire has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle!"
-sprc.308.a:0 "Good."
-
-sprc.309.t:0 "The End of the Spanish War"
-sprc.309.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.309.a:0 "Great!"
-
-sprc.310.t:0 "Carlist Uprising"
-sprc.310.d:0 "Spain is collapsing into anarchy, and the Pope has declared that Catholics should support the Carlist cause - We should send aid at once!"
-sprc.310.a:0 "Publicly Support the Carlists"
-sprc.310.b:0 "Remain silent on Spanish affairs"
-
-sprc.311.t:0 "Ireland supports us"
-sprc.311.d:0 "The Irish government has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle!"
-sprc.311.a:0 "Good."
-
-sprc.312.t:0 "The End of the Spanish War"
-sprc.312.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.312.a:0 "Great!"
-
-sprc.313.t:0 "Carlist Uprising"
-sprc.313.d:0 "Spain is collapsing into anarchy, and the Pope has declared that Catholics should support the Carlist cause - We should send aid at once!"
-sprc.313.a:0 "Publicly Support the Carlists"
-sprc.313.b:0 "Remain silent on Spanish affairs"
-
-sprc.314.t:0 "National France supports us"
-sprc.314.d:0 "The French government in exile has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle!"
-sprc.314.a:0 "Good."
-
-sprc.315.t:0 "The End of the Spanish War"
-sprc.315.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.315.a:0 "Great!"
 
 ### Post-War ###
 
