--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -3782,6 +3782,37 @@ MLT_social_conservatist:0 "Malta"
 MLT_social_conservatist_ADJ:0 "Maltese"
 MLT_social_conservatist_DEF:0 "Malta"
 
+MLW_totalist:0 "Socialist Republic of Malawi"
+MLW_totalist_ADJ:0 "Malawi"
+MLW_totalist_DEF:0 "The Socialist Republic of Malawi"
+MLW_syndicalist:0 "Socialist Republic of Malawi"
+MLW_syndicalist_ADJ:0 "Malawi"
+MLW_syndicalist_DEF:0 "The Socialist Republic of Malawi"
+MLW_radical_socialist:0 "Socialist Republic of Malawi"
+MLW_radical_socialist_ADJ:0 "Malawi"
+MLW_radical_socialist_DEF:0 "The Socialist Republic of Malawi"
+MLW_social_democrat:0 "Federation of Malawi"
+MLW_social_democrat_ADJ:0 "Malawi"
+MLW_social_democrat_DEF:0 "The Federation of Malawi"
+MLW_social_liberal:0 "Federation of Malawi"
+MLW_social_liberal_ADJ:0 "Malawi"
+MLW_social_liberal_DEF:0 "The Federation of Malawi"
+MLW_market_liberal:0 "Federated States of Malawi"
+MLW_market_liberal_ADJ:0 "Malawi"
+MLW_market_liberal_DEF:0 "The Federated States of Malawi"
+MLW_social_conservative:0 "Federation of Malawi"
+MLW_social_conservative_ADJ:0 "Malawi"
+MLW_social_conservative_DEF:0 "The Federation of Malawi"
+MLW_authoritarian_democrat:0 "Sultanate of Malawi"
+MLW_authoritarian_democrat_ADJ:0 "Malawi"
+MLW_authoritarian_democrat_DEF:0 "The Sultanate of Malawi"
+MLW_paternal_autocrat:0 "Sultanate of Malawi"
+MLW_paternal_autocrat_ADJ:0 "Malawi"
+MLW_paternal_autocrat_DEF:0 "The Sultanate of Malawi"
+MLW_national_populist:0 "Malawi Empire"
+MLW_national_populist_ADJ:0 "Malawi"
+MLW_national_populist_DEF:0 "The Malawi Empire"
+
 MLY_totalist:0 "Socialist Republic of Malaya"
 MLY_totalist_ADJ:0 "Malay"
 MLY_totalist_DEF:0 "The Socialist Republic of Malaya"
