Spelling fixes for all + other minor changes

--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -298,7 +298,7 @@ USA_embargo_international_desc:0 "To make sure that the International is brought
 USA_strike_syndicalism:0 "Strike the International"
 USA_strike_syndicalism_desc:0 "Now it is time to strike the International. Let our armies cross the Atlantic in the name of Freedom and Democracy and make sure that syndicalism is destroyed once and for all."
 USA_democracy_arsenal:0 "the Arsenal of Democracy"
-USA_democracy_arsenal_desc:0 "It is clear that it is the purpose of the nation to build now with all possible speed every machine, every arsenal, every factory that we need to manufacture our defense material. We must be the great arsenal of democracy."
+USA_democracy_arsenal_desc:0 "It is clear that it is the purpose of the nation to build now with all possible speed every machine, every arsenal, every factory that we need to manufacture our defence material. We must be the great arsenal of democracy."
 USA_liberty_ships:0 "Liberty Ships"
 USA_liberty_ships_desc:0 "Wherever we sail in this wide world let our ships be a sign of liberty and America's might and protection. These Liberty ships will help make sure that liberty does not end at the shore."
 USA_philippines_fate:0 "The Fate of the Philippines"
