And some more spelling fixes

--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -397,7 +397,7 @@ FRA_peaceful_revolution_desc:0 "We hear those who claim that the Revolution cann
 FRA_Host_the_Internationale:0 "The Internationale Congress"
 FRA_Host_the_Internationale_desc:0 "Heads of Socialist, Syndicalist, and Totalist parties, Heads of State and Governments, Foreign Ministers and journalists have all arrived in Paris for the opening of the First Congress of the Third Internationale. We are first to host the Congress and humbly hope to use it to establish ourselves as the leading socialist country in the world."
 FRA_mission_bhartiya:0 "Mission to the Bharatiya Commune"
-FRA_mission_bhartiya_desc:0 "The Bharatiya Commune asked for our support in their struggle against its neighbours, the Delhi imperialists and the Princely Federation reactionaries. They ask of us that we send military advisors to train their officers and their troops. We will ensure this aid arrives rapidly, so that they may unite India faster."
+FRA_mission_bhartiya_desc:0 "The Bharatiya Commune asked for our support in their struggle against its neighbours, the Delhi imperialists and the Princely Federation reactionaries. They ask of us that we send military advisers to train their officers and their troops. We will ensure this aid arrives rapidly, so that they may unite India faster."
 FRA_muslim_comitee:0 "Socialist Muslim Committee"
 FRA_muslim_comitee_desc:0 "We are in a state of war with several countries with a significant Muslim population. Our goal is to spread Syndicalism to the Middle East. Socialism and Communism in the Muslim world has always been a complicated affair, but a re-emerging theory of 'Islamic Communism' could be supported to trigger an anti-reactionary uprising."
 FRA_working_women:0 "Working Women"
