--- a/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -16,7 +16,7 @@ BEL_Language_Trouble_desc:0 "Belgium has always been a country of Flemish and Wa
 BEL_Protest_1936:0 "Great Protest of '36"
 BEL_Protest_1936_desc:0 "Protest! After the disaster that was the 17th of February thousands of Belgians flock to the streets of Brussels chanting the Brabançonne."
 BEL_German_Immigration:0 "German Immigration"
-BEL_German_Immigration_desc:0 "In an effort to pacify Wallonia King Adalbert has encouraged German citizens to setlle in Wallonia."
+BEL_German_Immigration_desc:0 "In an effort to pacify Wallonia King Adalbert has encouraged German citizens to settle in Wallonia."
 BEL_Caritas:0 "Caritas"
 BEL_Caritas_desc:0 "The Catholic church in Belgium has a tradition of providing help to the poor and struggling under the name "Caritas"."
 BEL_Flemish_Lion:0 "Flemish Lion"
@@ -38,7 +38,7 @@ BEL_Small_Industry_desc:0 "By encouraging small industry over large we can bette
 BEL_Empower_Workers:0 "Empower Workers"
 BEL_Empower_Workers_desc:0 "By empowering the working class instead of the government we might be able to root out the problem more efficiently."
 BEL_Simplify:0 "Simplified Industrial Laws"
-BEL_Simplify_desc:0 "By simplifying the laws required to create and maintain a buisness we might encourage more production."
+BEL_Simplify_desc:0 "By simplifying the laws required to create and maintain a business we might encourage more production."
 BEL_welfare_state:0 "Welfare State"
 BEL_welfare_state_desc:0 "A welfare state created for and by the workers will guarantee a more secure way of life for everyone."
 BEL_The_Lion:0 "The Belgian Lion roars once more"
@@ -124,7 +124,7 @@ bel.5.t:0 "Wait for them to calm down"
 bel.5.d:0 "After many considerations the King decided to stay put in the palace and wait out the protest. The Protest however started to spread to Leuven and soon the students of the KUL started to march through the streets waving the Belgian flag."
 bel.5.a:0 "Its only growing worse!"
 bel.6.t:0 "Walloons in Charleroi and Mons rise up"
-bel.6.d:0 "With the protest raging in Flemish Brabant the Syndicalists of Hainaut see their chance and lay down their work. Thousands of protesters gather in the cities and demand more represantation and the expulsion of all German forces."
+bel.6.d:0 "With the protest raging in Flemish Brabant the Syndicalists of Hainaut see their chance and lay down their work. Thousands of protesters gather in the cities and demand more representation and the expulsion of all German forces."
 bel.6.a:0 "Will this never end?"
 bel.7.t:0 "Mass Desertion"
 bel.7.d:0 "As the riots continue and the movements keep growing, many of the soldiers of the former Belgian Army have deserted leaving the army dangerously understaffed." 
@@ -299,9 +299,9 @@ bel.56.t:0 "Dutch Refuse"
 bel.56.d:0 "With refusal from the Dutch government to co-operate it seems that we will only get our goal by war."
 bel.56.a:0 "Then war it shall be!"
 bel.57.t:0 "Choose Military Investment"
-bel.57.d:0 "As we are just a small country we will have to choose a focus for our investments in the military. We could choose to expand our navy and be able to better defend our coasts or we could focus on building some armor regiments so we can better defend ourselves on land."
+bel.57.d:0 "As we are just a small country we will have to choose a focus for our investments in the military. We could choose to expand our navy and be able to better defend our coasts or we could focus on building some armour regiments so we can better defend ourselves on land."
 bel.57.a:0 "Navy first"
-bel.57.b:0 "Armor first"
+bel.57.b:0 "Armour first"
 bel.58.t:0 "Naval Effort"
 bel.58.d:0 "We have decided to spend our extra resources in rebuilding the Belgian navy. After the Belgian navy was sunk by German mines in the Weltkrieg, we were given 4 destroyers as compensation at the end of the war. This is however not enough to express any power over the seas. Therefore we will fund a commission tasked with looking into naval expansion possibilities."
 bel.58.a:0 "Rule Belgium, Belgium rules the waves!"
@@ -345,7 +345,11 @@ bel.69.t:0 "Belgian Tanks ready"
 bel.69.d:0 "Our factories have prepared their first batch of Belgian tanks and are ready to enter mass production."
 bel.69.a:0 "Very well"
 
+#
+#
 # Checked up-to here so far - Zankoas
+#
+#
 
 ### Thinking waffle suggested text ###
 BEL_Charles_d'Aspremont_Lynden_for_pau:0 "Charles d'Aspremont Lynden"
