--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -934,7 +934,7 @@ gerfor.63.a:0 "The money is good!"
 gerfor.63.b:0 "We can't anger the British!"
 
 gerfor.64.t:0 "Norway agrees to lease Trondheim"
-gerfor.64.d:0 "The Norwegian government has decided to agree to our offer of leasing Trondheim for the next 25 years! A small commission is already on its way to assess the investments necessary to make Trondheim an integral part in our defense against Syndicalism."
+gerfor.64.d:0 "The Norwegian government has decided to agree to our offer of leasing Trondheim for the next 25 years! A small commission is already on its way to assess the investments necessary to make Trondheim an integral part in our defence against Syndicalism."
 gerfor.64.a:0 "Very good."
 
 gerfor.65.t:0 "Norway does not agree to lease Trondheim"
