--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -150,33 +150,33 @@ SIA_nationalreserveact:0 "National Reserve Act"
 SIA_nationalizationofforeignindustries:0 "Nationalization of Foreign Industries"
 SIA_defensetechnologyinstitute:0 "Defense Technology Institute"
 SIA_ratthaniyomdecrees:0 "Ratthaniyom Decrees"
-SIA_reapporachthemonarchy:0 "Reapproach the Monarchy"
+SIA_reapporachthemonarchy:0 "Re-approach the Monarchy"
 SIA_nationaldevelopmentplan:0 "National Development Plan"
 SIA_creationoftherepublic:0 "Creation of the Republic"
 SIA_phaopoliceintegration:0 "Phao's Police Integration"
-SIA_ratthasapha_desc:0 "To modernized Siam further - there mus be some bureaucratic refrom from the old inefficient Absolute Monarchy.The Anantasamakhom Throne Hall is deemed suitable as a place for the new Ratthasapha (Parliament) bulding, to allow more people to participate in this nation's development."
+SIA_ratthasapha_desc:0 "To modernised Siam further - there mus be some bureaucratic reform from the old inefficient Absolute Monarchy.The Anantasamakhom Throne Hall is deemed suitable as a place for the new Ratthasapha (Parliament) building, to allow more people to participate in this nation's development."
 SIA_khana_ratsadon_desc:0 "While Prajadhipok's plan seems nice - they are being implemented at much a slower pace due to the intervention of those who feel that their own interests are being harmed. With those inequalities in the Siamese society, Nepotism among the bureaucrat and the new economic crisis. Khana Ratsadon (People's Party) shall lead the change by removing the biggest obstacle known as the 'Siamese Council of State' from power!"
 SIA_yellowcoverdossier_desc:0 "Luang Praditmanutham (Pridi Panomyong) had propose a socialist constitution aiming to dealt with the inaquality problem within our society such as new land reforms to provide landless farmers with their own land and welfare state. While it did enjoy quite a popular support from the peasants, the old nobilities of course object this plan. Maybe dealing with the devils can guarantee safety of our own nation from the Syndicalist threat?"
 SIA_statewelfare:0 "State-Provided Welfare"
-SIA_halfleafdemocracy_desc:0 "A firm, strong grip of the Monarch to dictate the direction of our country might be needed to counter the waves of Syndicalist threat properly. By granting the king more power such as appointing his own Prime Minister, immunity from persecution by law and others, we might be loosing poppular support from the liberals but that will guarantee stability in the long run."
+SIA_halfleafdemocracy_desc:0 "A firm, strong grip of the Monarch to dictate the direction of our country might be needed to counter the waves of Syndicalist threat properly. By granting the king more power such as appointing his own Prime Minister, immunity from persecution by law and others, we might be loosing popular support from the liberals but that will guarantee stability in the long run."
 SIA_prestigious_senate_desc:0 "Wutthisapha (Senate) is created to mimic the British House of Lords in mind. By allowing the King to pick those who're both royal and experienced himself, we can probably prevent some of those too radical bills to pass."
-SIA_privycouncilreforms_desc:0 "With the Siamese Council of States dictating the king's policies from the shadows for a long time - reforming the old Privvy Council with like-minded advisors might be able to compete in influence with them and become the main driving force for our nation eventually."
-SIA_empowerthenobility_desc:0 "Maybe by modernizing the old Nobility system into the one based on Meritocracy as opposed to abolish it - Efficient bureaucratic system might be achieveable this way too. "
+SIA_privycouncilreforms_desc:0 "With the Siamese Council of States dictating the king's policies from the shadows for a long time - reforming the old Privvy Council with like-minded advisers might be able to compete in influence with them and become the main driving force for our nation eventually."
+SIA_empowerthenobility_desc:0 "Maybe by modernising the old Nobility system into the one based on Meritocracy as opposed to abolish it - Efficient bureaucratic system might be achievable this way too. "
 SIA_fathergovernschildren_desc:0 "By allowing our subjects to voiced their own problem directly to the Privy Council like the Benevolent King Ramkamhaeng the Great of the Sukothai era. Several issues could be solved at a much faster pace."
 SIA_tourthenation_desc:0 "To know the problem our subjects experienced personally - the King must visit those place personally which also served as a way to increase their trust in the Monarchy."
 SIA_royalprojectfoundation_desc:0 "To tackle with those problems efficiently - a commission needed to be made to find the best solution for those problems and keeping track of those projects."
 SIA_adevotedmonarchy_desc:0 "By working closely with our subjects in developing the nation - we've gain staunch support from the rural areas which also served as a deterrent to the scarlet phantom known as Syndicalist threat."
-SIA_nationwidelandreform_desc:0 "There are lots of lands across the country which is own by the nobilities but left abandonned due to whatever reasons - by distributing them to the poor landless rice farmers, much more produtivity can be gained from those lands but that'll surely provoked some landlords. "
+SIA_nationwidelandreform_desc:0 "There are lots of lands across the country which is own by the nobilities but left abandoned due to whatever reasons - by distributing them to the poor landless rice farmers, much more productivity can be gained from those lands but that'll surely provoked some landlords. "
 SIA_fiveyearplan_desc:0 "By encouraging the development of the rural areas by promoting infrastructure and industrial development - we're well on the road to join the Siwilai (Civilized) countries list like Japan and South America."
 SIA_governmentalreform:0 "Governmental Reform"
-SIA_juridicialreform:0 "Juridicial Reform"
-SIA_centralizedpolicecommand:0 "Centralized Police Command"
+SIA_juridicialreform:0 "Judicial Reform"
+SIA_centralizedpolicecommand:0 "Centralised Police Command"
 SIA_SDSI:0 "SDSI"
 SIA_nationalcurriculumact:0 "National Curriculum Act"
 SIA_regionaluniversities_desc:0 "SIA_regionaluniversities_desc"
 SIA_regionaluniversities:0 "Creation of Regional Universities"
 SIA_kingmongkutinstitute:0 "King Mongkut's Institute of Technology"
-SIA_intialeconomictsabilisation:0 "Intial Economic Stabilisaton"
+SIA_intialeconomictsabilisation:0 "Initial Economic Stabilisation"
 SIA_kickstartlocalbusiness:0 "Kickstart Local Business"
 SIA_bailoutsiamcement:0 "Bailout Siam Cement"
 SIA_chiangmaioil:0 "Chiang Mai Oil Discovery"
@@ -210,7 +210,7 @@ SIA_railwaygauge:0 "Standardisation of Railway Gauge"
 SIA_isanrailway:0 "Isan Railway Expansion"
 SIA_southernrailway:0 "Southern Railway Expansion"
 SIA_northernrailway:0 "Northern Railway Expansion"
-SIA_maritimesilkroad:0 "Maritime Silkroad Intiative"
+SIA_maritimesilkroad:0 "Maritime Silkroad Initiative"
 SIA_transtensassarimrailway:0 "Trans-Tenassarim Railway"
 SIA_maptaphuthawaiport_desc:0 "SIA_maptaphuthawaiport_desc"
 SIA_maptaphuthawaiport:0 "Maptaphut-Thawai Port Facilities"
